--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tic-tac-toe-game-engine",
+  "name": "tic-tac-toe-stateless-engine",
   "version": "1.0.0",
   "description": "Stateless tic tac toe engine that provides a set of pure functions",
   "main": "lib/index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nicklas766/tic-tac-toe-game-engine.git"
+    "url": "git+https://github.com/Nicklas766/tic-tac-toe-stateless-engine.git"
   },
   "keywords": [
     "tic-tac-toe"
@@ -19,9 +19,9 @@
   "author": "Nicklas Envall",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nicklas766/tic-tac-toe-game-engine/issues"
+    "url": "https://github.com/Nicklas766/tic-tac-toe-stateless-engine/issues"
   },
-  "homepage": "https://github.com/Nicklas766/tic-tac-toe-game-engine#readme",
+  "homepage": "https://github.com/Nicklas766/tic-tac-toe-stateless-engine#readme",
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
